--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,15 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi[all] (>=0.115.12,<0.116.0)",
+    "alembic (>=1.15.2,<2.0.0)",
+    "aiogram (>=3.20.0.post0,<4.0.0)",
+    "redis (>=6.1.0,<7.0.0)",
+    "pytest (>=8.3.5,<9.0.0)",
+    "mypy (>=1.15.0,<2.0.0)",
+    "dishka (>=1.5.3,<2.0.0)",
+    "uvicorn (>=0.34.2,<0.35.0)",
+    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)"
 ]
 
 
