update docker containers

--- a/docker_compose/broker.yaml
+++ b/docker_compose/broker.yaml
@@ -27,7 +27,7 @@ services:
       - ../.env
     depends_on:
       - rabbitmq
-    command: sh -c "sleep 15 && python -m src.infrastructure.broker_messages.rabbitmq.consumer"
+    command: sh -c "sleep 15 && python -m backend.src.infrastructure.broker_messages.rabbitmq.consumer"
     networks:
       - backend
 
