--- a/docker_compose/storages.yaml
+++ b/docker_compose/storages.yaml
@@ -31,8 +31,22 @@ services:
     networks:
       - backend
 
+  redis:
+    image: redis:latest
+    container_name: redis_container
+    ports:
+      - "6379:6379"
+    
+    volumes:
+      - redisdata:/data
+
+    restart: unless-stopped
+    networks:
+      - backend
+
 volumes:
   pgdata:
+  redisdata:
 
 networks:
   backend:
