--- a/docker_compose/logs_monitoring.yaml
+++ b/docker_compose/logs_monitoring.yaml
@@ -41,8 +41,15 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+    - GF_SECURITY_ADMIN_USER=maksim
+    - GF_SECURITY_ADMIN_PASSWORD=maksim
+    - GF_SMTP_ENABLED=true
+    - GF_SMTP_HOST=smtp.gmail.com:587
+    - GF_SMTP_USER=theinter.company.inc@gmail.com
+    - GF_SMTP_PASSWORD=wqpd miur neoo cqsb
+    - GF_SMTP_FROM_ADDRESS=theinter.company.inc@gmail.com
+    - GF_SMTP_FROM_NAME=Grafana
+    - GF_SMTP_SKIP_VERIFY=true
     volumes:
       - ./grafana/datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
       - ./grafana/dashboards:/var/lib/grafana/dashboards
