--- a/docker_compose/taskiq_worker.yaml
+++ b/docker_compose/taskiq_worker.yaml
@@ -15,3 +15,21 @@ services:
       - ../backend:/app
     networks:
       - backend
+
+
+  taskiq-scheduler:
+    build:
+      context: ..
+      dockerfile: backend/Dockerfile
+    container_name: taskiq-scheduler
+    command: >
+      sh -c "sleep 10 &&
+             taskiq scheduler -fsd src.infrastructure.taskiq.scheduler:schedule"
+    env_file:
+      - ../.env
+    depends_on:
+      - rabbitmq
+    volumes:
+      - ../backend:/app
+    networks:
+      - backend
